--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -14,8 +14,16 @@
     </head>
     <body>
         <header class="header">
-            <div class="logo-box">
-                <img class="logo" src=".//img/logo-white.png" alt="logo">
+            <div class="header__logo-box">
+                <img class="header__logo" src=".//img/logo-white.png" alt="logo">
+            </div>
+            <div class="header__text-box">
+             <h1 class="header-primary">
+                 <span class="header-primary--main">outdoors</span>
+                 <span class="header-primary--sub">is where life happens</span>
+             </h1>
+
+             <a href="#" class="btn btn--white btn--animated">discover our tours</a>
             </div>
         </header>
         
